--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Open+Sans:wght@700&family=Source+Sans+3&display=swap" rel="stylesheet">
-</head>
-<body>
-    <style>
+     <style>
         p, h2 {text-indent: 25px;}
         .aligncenter {text-align: center;}
         body {background: #92d0d9;
@@ -53,9 +51,10 @@
             background-color: rgb(196, 34, 54);
         }
     </style>
-
+</head>
+<body>
     <h1 class="aligncenter">Домашнее Задание №2</h1>
-    <p class="aligncenter"> <img src="дз.jpg"/> </p >
+    <p class="aligncenter"> <img src="/img/дз.jpg" alt="Ну не получилось"> </p >
     <h2>Тема № 1 - Теги</h2>
     <p>Мы начали изучать теги HTML, практически все теги "открываются и закрываются" соответствующими знаками, которые знают обсалютно все, поэтому мы их приводить не будем:</p>
     <ul>
