--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <h1 class="aligncenter">Домашнее Задание №2</h1>
-    <p class="aligncenter"> <img src="/img/дз.jpg" alt="Ну не получилось"> </p >
+    <p class="aligncenter"> <img src="/img/дз.JPG" alt="Ну не получилось"> </p >
     <h2>Тема № 1 - Теги</h2>
     <p>Мы начали изучать теги HTML, практически все теги "открываются и закрываются" соответствующими знаками, которые знают обсалютно все, поэтому мы их приводить не будем:</p>
     <ul>
@@ -70,7 +70,6 @@
         <li><b>linc</b> - ссылка на внешний ресурс</li>
     </ul>
     <button class="btn1" onclick="alert('Данные загружены!')">В мозг тему №1</button>
-
 
     <h2>Тема № 2 - CSS свойства, компоненты</h2>
     <p>В этой теме были узучены различные стили для элементов веб-страниц</p>
