--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shef Igor</title>
+    <title>Shef I</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Open+Sans:wght@700&family=Source+Sans+3&display=swap" rel="stylesheet">
@@ -54,7 +54,7 @@
 </head>
 <body>
     <h1 class="aligncenter">Домашнее Задание №2</h1>
-    <p class="aligncenter"> <img src="/img/DZZ.JPG" alt="Ну не получилось"> </p >
+    <p class="aligncenter"> <img src="/img/DZZ.JPG" alt="Картинка не загрузилась..."> </p >
     <h2>Тема № 1 - Теги</h2>
     <p>Мы начали изучать теги HTML, практически все теги "открываются и закрываются" соответствующими знаками, которые знают обсалютно все, поэтому мы их приводить не будем:</p>
     <ul>
