--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <style>
         p, h2 {text-indent: 25px;}
         .aligncenter {text-align: center;}
-        body {background: #92d0d9;
+        body {background: #d9ac92;
         color: #000000;}
         .btn1 {
             border-radius: 4px;
