--- a/index.html
+++ b/index.html
@@ -3,94 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shef Igor</title>
+    <title>homework</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Open+Sans:wght@700&family=Source+Sans+3&display=swap" rel="stylesheet">
-     <style>
-        p, h2 {text-indent: 25px;}
-        .aligncenter {text-align: center;}
-        body {background: #d9ac92;
-        color: #000000;}
-        .btn1 {
-            border-radius: 4px;
-            color: rgb(255, 255, 255);
-            background-color: rgb(27, 27, 27);
-            width: 120px;
-            height: 29px;
-            font-size: 13px;
-            font-weight: 600;
-            font-family: 'Inter', sans-serif;
-        }
-        .btn1:hover {
-            background-color: rgb(105, 105, 105);
-        }
-        .btn2 {
-            color: rgb(255, 255, 255);
-            background-color: rgb(4, 170, 109);
-            width: 281px;
-            height: 44px;
-            font-size: 16px;
-            font-weight: 600; 
-            font-family: 'Source Sans 3', sans-serif;
-        }
-        .btn2:hover {
-            background-color: rgb(5, 152, 98);
-        }
-        .btn3 {
-            border-radius: 6px;
-            color: rgb(255, 255, 255);
-            background-color: rgb(174, 0, 21);
-            width: 120px;
-            height: 29px;
-            font-size: 12px;
-            font-weight: 700; 
-            font-family: 'Open Sans', sans-serif;
-        }
-        .btn3:hover {
-            background-color: rgb(196, 34, 54);
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/st.css">
 </head>
 <body>
-    <h1 class="aligncenter">Домашнее Задание №2</h1>
-    <p class="aligncenter"> <img src="img/DZZ.JPG" alt="Картинка не загрузилась..."> </p >
-    <h2>Тема № 1 - Теги</h2>
-    <p>Мы начали изучать теги HTML, практически все теги "открываются и закрываются" соответствующими знаками, которые знают обсалютно все, поэтому мы их приводить не будем:</p>
-    <ul>
-        <li> <b>p</b> - абзац </li>
-        <li><b>h1,h2...</b> - Заголовки различного порядка</li>
-        <li><b>style</b> - стилизация компонентов, если можно так выразится</li>
-        <li><b>body</b> - "тело" самого сайта</li>
-        <li><b>ul</b> - нумерованный список</li>
-        <li><b>li</b> - элемент списка</li>
-        <li><b>ol</b> - ненумерованный (маркерованный) список</li>
-        <li><b>title</b> - заголовок сайта</li>
-        <li><b>button</b> - кнопка</li>
-        <li><b>linc</b> - ссылка на внешний ресурс</li>
-    </ul>
-    <button class="btn1" onclick="alert('Данные загружены!')">В мозг тему №1</button>
+    <div class="tank">
+        <div class="spinner">
+            <div class="fadein">
+                <img src="img\1.png" class="img" alt="">
+                <img src="img\2.png" class="img" alt="">
+                <img src="img\3.png" class="img" alt="">
+                <img src="img\4.png" class="img" alt="">
+                <img src="img\5.png" class="img" alt="">
+                <img src="img\6.png" class="img" alt="">
+              </div>
 
-    <h2>Тема № 2 - CSS свойства, компоненты</h2>
-    <p>В этой теме были узучены различные стили для элементов веб-страниц</p>
-    <ol>
-        <li><b>color</b> - цвет компонента</li>
-        <li><b>text-indent</b> - отступ текста от края</li>
-        <li><b>text-align</b> - горизонтальное выравнивание</li>
-        <li><b>background-color</b> - цвет фона элемнта</li>
-        <li><b>width</b> - ширина элемента</li>
-        <li><b>height</b> - высота элемента</li>
-        <li><b>border</b> - линияч вокруг элемента</li>
-        <li><b>font-size</b> - размер шрифта</li>
-        <li><b>hover</b> - компонент для стилизации разлчных элементов</li>
-        <li><b>font-weight</b> - жирность текста</li>
-        <li><b> ... </b> - и некоторые другие</li>
-    </ol>
-    <button class="btn2" onclick="alert('Место заканчивается...')">В мозг тему №2</button>
+              <div class="fadein">
+                <img src="img\2.png" class="img" alt="">
+                <img src="img\3.png" class="img" alt="">
+                <img src="img\4.png" class="img" alt="">
+                <img src="img\5.png" class="img" alt="">
+                <img src="img\6.png" class="img" alt="">
+                <img src="img\1.png" class="img" alt="">
+              </div>
+              <div class="fadein">
+                <img src="img\3.png" class="img" alt="">
+                <img src="img\4.png" class="img" alt="">
+                <img src="img\5.png" class="img" alt="">
+                <img src="img\6.png" class="img" alt="">
+                <img src="img\1.png" class="img" alt="">
+                <img src="img\2.png" class="img" alt="">
+              </div>
+              <div class="fadein">
+                <img src="img\4.png" class="img" alt="">
+                <img src="img\5.png" class="img" alt="">
+                <img src="img\6.png" class="img" alt="">
+                <img src="img\1.png" class="img" alt="">
+                <img src="img\2.png" class="img" alt="">
+                <img src="img\3.png" class="img" alt="">
+              </div>
+              <div class="fadein">
+                <img src="img\5.png" class="img" alt="">
+                <img src="img\6.png" class="img" alt="">
+                <img src="img\1.png" class="img" alt="">
+                <img src="img\2.png" class="img" alt="">
+                <img src="img\3.png" class="img" alt="">
+                <img src="img\4.png" class="img" alt="">
+              </div>
+              <div class="fadein">
+                <img src="img\6.png" class="img" alt="">
+                <img src="img\1.png" class="img" alt="">
+                <img src="img\2.png" class="img" alt="">
+                <img src="img\3.png" class="img" alt="">
+                <img src="img\4.png" class="img" alt="">
+                <img src="img\5.png" class="img" alt="">
+              </div>
+        </div>
+    </div>
 
-    <h2>Тема № 3 - Кнопки (button)</h2>
-    <p>Изучали визуализацию кнопок - графические варианты и применение стилей</p>
-    <button class="btn3" onclick="alert('Не уверен что записалось..')">Туда же №3</button>
-    
 </body>
 </html>
