--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
               </div>
         </div>
     </div>
+    <div class="certificate">
+      <img src="additional-files/cертификатC.png" class="img" alt="СертификатC#...">
+    </div>
 
 </body>
 </html>
