--- a/index.html
+++ b/index.html
@@ -6,66 +6,71 @@
     <title>PortVers2</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/st.css">
 </head>
 <body>
-    <div class="tank">
-        <div class="spinner">
-            <div class="fadein">
-                <img src="img\1.png" class="img" alt="">
-                <img src="img\2.png" class="img" alt="">
-                <img src="img\3.png" class="img" alt="">
-                <img src="img\4.png" class="img" alt="">
-                <img src="img\5.png" class="img" alt="">
-                <img src="img\6.png" class="img" alt="">
-              </div>
-
-              <div class="fadein">
-                <img src="img\2.png" class="img" alt="">
-                <img src="img\3.png" class="img" alt="">
-                <img src="img\4.png" class="img" alt="">
-                <img src="img\5.png" class="img" alt="">
-                <img src="img\6.png" class="img" alt="">
-                <img src="img\1.png" class="img" alt="">
-              </div>
-              <div class="fadein">
-                <img src="img\3.png" class="img" alt="">
-                <img src="img\4.png" class="img" alt="">
-                <img src="img\5.png" class="img" alt="">
-                <img src="img\6.png" class="img" alt="">
-                <img src="img\1.png" class="img" alt="">
-                <img src="img\2.png" class="img" alt="">
-              </div>
-              <div class="fadein">
-                <img src="img\4.png" class="img" alt="">
-                <img src="img\5.png" class="img" alt="">
-                <img src="img\6.png" class="img" alt="">
-                <img src="img\1.png" class="img" alt="">
-                <img src="img\2.png" class="img" alt="">
-                <img src="img\3.png" class="img" alt="">
-              </div>
-              <div class="fadein">
-                <img src="img\5.png" class="img" alt="">
-                <img src="img\6.png" class="img" alt="">
-                <img src="img\1.png" class="img" alt="">
-                <img src="img\2.png" class="img" alt="">
-                <img src="img\3.png" class="img" alt="">
-                <img src="img\4.png" class="img" alt="">
-              </div>
-              <div class="fadein">
-                <img src="img\6.png" class="img" alt="">
-                <img src="img\1.png" class="img" alt="">
-                <img src="img\2.png" class="img" alt="">
-                <img src="img\3.png" class="img" alt="">
-                <img src="img\4.png" class="img" alt="">
-                <img src="img\5.png" class="img" alt="">
-              </div>
-        </div>
-    </div>
+  <div class="container">
     <div class="certificate">
-      <img src="additional-files/cертификатC.png" class="img" alt="СертификатC#...">
+      <img src="additional-files/cертификатC%23.png" class="img" alt="СертификатC#...">
     </div>
+    <div class="container">
+      <a href="https://nftcert.org/certificate/21" style="font-size: 24px; font-weight: 600;"   target="_blank"> Ссылка на сертификат С#</a>
+    </div>
+  </div>
+  <div class="tank">
+    <div class="spinner">
+        <div class="fadein">
+            <img src="img\1.png" class="img" alt="">
+            <img src="img\2.png" class="img" alt="">
+            <img src="img\3.png" class="img" alt="">
+            <img src="img\4.png" class="img" alt="">
+            <img src="img\5.png" class="img" alt="">
+            <img src="img\6.png" class="img" alt="">
+          </div>
 
+          <div class="fadein">
+            <img src="img\2.png" class="img" alt="">
+            <img src="img\3.png" class="img" alt="">
+            <img src="img\4.png" class="img" alt="">
+            <img src="img\5.png" class="img" alt="">
+            <img src="img\6.png" class="img" alt="">
+            <img src="img\1.png" class="img" alt="">
+          </div>
+          <div class="fadein">
+            <img src="img\3.png" class="img" alt="">
+            <img src="img\4.png" class="img" alt="">
+            <img src="img\5.png" class="img" alt="">
+            <img src="img\6.png" class="img" alt="">
+            <img src="img\1.png" class="img" alt="">
+            <img src="img\2.png" class="img" alt="">
+          </div>
+          <div class="fadein">
+            <img src="img\4.png" class="img" alt="">
+            <img src="img\5.png" class="img" alt="">
+            <img src="img\6.png" class="img" alt="">
+            <img src="img\1.png" class="img" alt="">
+            <img src="img\2.png" class="img" alt="">
+            <img src="img\3.png" class="img" alt="">
+          </div>
+          <div class="fadein">
+            <img src="img\5.png" class="img" alt="">
+            <img src="img\6.png" class="img" alt="">
+            <img src="img\1.png" class="img" alt="">
+            <img src="img\2.png" class="img" alt="">
+            <img src="img\3.png" class="img" alt="">
+            <img src="img\4.png" class="img" alt="">
+          </div>
+          <div class="fadein">
+            <img src="img\6.png" class="img" alt="">
+            <img src="img\1.png" class="img" alt="">
+            <img src="img\2.png" class="img" alt="">
+            <img src="img\3.png" class="img" alt="">
+            <img src="img\4.png" class="img" alt="">
+            <img src="img\5.png" class="img" alt="">
+          </div>
+  </div>
+  
+  </div>
 </body>
 </html>
